# docs

./: .gitignore  .pre-commit-config.yaml  .prettierrc  404.html  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
.github/workflows/: docs.yml  lint.yml
agent/: index.html
agent/examples/task-examples/: index.html
agent/getting-started/concepts/: index.html
agent/getting-started/introduction/: index.html
agent/getting-started/quickstart/: index.html
agent/guides/assignment-rules/: index.html
agent/guides/best-practices/: index.html
agent/guides/validation-rules/: index.html
agent/knowledge/base/: index.html
agent/knowledge/coder-artifact/: index.html
agent/parameters/input-parameters/: index.html
agent/parameters/output-parameters/: index.html
agent/tasks/ai-task/: index.html
agent/tasks/app-task/: index.html
agent/tasks/coder-task/: index.html
agent/tasks/conditional-task/: index.html
agent/tasks/human-task/: index.html
agent/tasks/overview/: index.html
chat/: index.html
chat/conversations/: index.html
chat/message/: index.html
chat/webhooks/: index.html
dev_config/: markdownlint.yaml
docs/: index.md
docs/agent/: index.md
docs/agent/examples/: task-examples.md
docs/agent/getting-started/: concepts.md  introduction.md  quickstart.md
docs/agent/guides/: assignment-rules.md  best-practices.md  validation-rules.md
docs/agent/knowledge/: base.md  coder-artifact.md
docs/agent/tasks/: ai-task.md  (+5 more)
docs/chat/: conversations.md  index.md  message.md  webhooks.md
search/: search_index.json
(+2 files in other folders)
