[project]
name = "docs"
version = "0.1.0"
description = "Official documentation for GAIFE. Includes guides, API references, examples, and best practices."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cairosvg>=2.7.1",
    "mkdocs-material>=9.5.50",
    "mkdocs-minify-plugin>=0.8.0",
    "pillow>=11.1.0",
    "pre-commit>=4.1.0",
]
